[package]
name = "rand-repr"
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "Randomize enum representations in accordance with Riscure Fault Mitigation Pattern 1"

[lib]
proc-macro = true

[dependencies]
rand = { version = "0.9", features = ["os_rng"] }
num-traits = { version = "0.2.19" }